Radio buttons added to sort by number of likes/retweets. Issue with viewport jumping on click

--- a/SeeTweetApp/public/stylesheets/style.css
+++ b/SeeTweetApp/public/stylesheets/style.css
@@ -63,7 +63,12 @@ image {
 }
 
 /*Center Embedded Tweets*/
-/*.twitter-tweet {
-  display:block;
-  margin:auto;
-}*/
+.twitter-tweet {
+  display: block;
+  margin: auto;
+  text-align: center;
+}
+
+input[type=radio] {
+  display: inline;
+}
